--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "mysql": "~2.0.0-alpha8",
         "log4js": "*",
         "bcrypt": "*",
-        "express": "*",
+        "express": "~3.3.4",
         "helmet": "*",
         "jade": "*",
         "ejs": "*",        
